--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,33 @@
 version: '3'
 services:
+  app:
+    build:
+      context: ./app
+      dockerfile: ../build/app/Dockerfile
+    volumes:
+      - ./app:/app
+      - app_modules:/app/deps
+      - app_modules:/app/_build
+    ports:
+      - 4000:4000
+    tty: true
+    depends_on:
+      - db
+    command: >
+      bash -c "
+        mix ecto.create && mix ecto.migrate && 
+        mix phx.server"
+    
   db:
     build:
       context: ./build/db
       dockerfile: Dockerfile
     ports:
-      - "5432:5432"
+      - 5432:5432
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
+
+volumes:
+  app_modules:
+
