--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,7 +12,8 @@ services:
       - 4000:4000
     tty: true
     depends_on:
-      - db
+      db:
+          condition: service_healthy
     command: >
       bash -c "
         mix ecto.create && mix ecto.migrate && 
@@ -24,6 +25,12 @@ services:
       dockerfile: Dockerfile
     ports:
       - 5432:5432
+    healthcheck:
+      test: ["CMD", "psql", "-U", "postgres"]
+      interval: 10s
+      retries: 5
+      start_period: 10s
+      timeout: 10s
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
